@@ -21,7 +21,7 @@
 
 #include <gmock/gmock.h>
 
-#include <mesos/state/protobuf.hpp>
+#include <mesos/state/state.hpp>
 
 #include <process/future.hpp>
 #include <process/owned.hpp>
@@ -40,7 +40,7 @@ class MockRegistrar : public mesos::internal::master::Registrar
 {
 public:
   MockRegistrar(const master::Flags& flags,
-                mesos::state::protobuf::State* state,
+                mesos::state::State* state,
                 const Option<std::string>& authenticationRealm = None());
 
   virtual ~MockRegistrar();
